zod_gen_derive/tests/ui/internal_tag_tuple.stderr
error: #[serde(tag = "...")] cannot be used with tuple variants
 --> tests/ui/internal_tag_tuple.rs
  |
  |     Tuple(u32, String),
  |     ^^^^^^^^^^^^^^^^^^
